--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Excursion</title>
+    <link href="#" rel="stylesheet" type="text/css"/>
+</head>
+<body>
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+        <a href="#" class="header-link">Download Excursion (Coming
+             Soon!)</a>
+    </header>
+    
+</body>
+</html>
