--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         <a href="#" class="header-link">Download Excursion (Coming
              Soon!)</a>
     </header>
+
+    <video autoplay muted>
+        <source src="/Users/ruslan/excursion/resources/videos/excursion.mp4" type="video/mp4" />
+    </video>
     
+<h2>Your personal travel guide</h2>
+
+<div class="image-container">
+<p>Excursions remember places you like, and recommends new points of interest around you.</p>
+<img src="/Users/ruslan/excursion/resources/images/camp.jpg" class="camp-photo" alt="camping photo" />
+</div>
+
+<div class="coming-soon">
+    <img src="/Users/ruslan/excursion/resources/images/phone.png" class="phone-icon" alt="phone icon"/>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="#" class="download-url">Doanload Excursion (Coming Soon!)</a>
+</div>
+
+<footer>
+    <p>&copy; Excursion</p>
+</footer>
+
 </body>
 </html>
