added css code, and updated html

--- a/index.html
+++ b/index.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excursion</title>
-    <link href="#" rel="stylesheet" type="text/css"/>
-</head>
-<body>
+    <link
+      href="/Users/ruslan/excursion/resources/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
     <header>
-        <h1>Discover hidden places in the world around you</h1>
-        <a href="#" class="header-link">Download Excursion (Coming
-             Soon!)</a>
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="#" class="header-link">Download Excursion (Coming Soon!)</a>
     </header>
 
     <video autoplay muted>
-        <source src="/Users/ruslan/excursion/resources/videos/excursion.mp4" type="video/mp4" />
+      <source
+        src="/Users/ruslan/excursion/resources/videos/excursion.mp4"
+        type="video/mp4"
+      />
     </video>
-    
-<h2>Your personal travel guide</h2>
 
-<div class="image-container">
-<p>Excursions remember places you like, and recommends new points of interest around you.</p>
-<img src="/Users/ruslan/excursion/resources/images/camp.jpg" class="camp-photo" alt="camping photo" />
-</div>
+    <h2>Your personal travel guide</h2>
 
-<div class="coming-soon">
-    <img src="/Users/ruslan/excursion/resources/images/phone.png" class="phone-icon" alt="phone icon"/>
-    <h2>Coming Soon for iPhone and Android</h2>
-    <a href="#" class="download-url">Doanload Excursion (Coming Soon!)</a>
-</div>
+    <div class="image-container">
+      <p>
+        Excursions remember places you like, and recommends new points of
+        interest around you.
+      </p>
+      <img
+        src="/Users/ruslan/excursion/resources/images/camp.jpg"
+        class="camp-photo"
+        alt="camping photo"
+      />
+    </div>
 
-<footer>
-    <p>&copy; Excursion</p>
-</footer>
+    <div class="coming-soon">
+      <img
+        src="/Users/ruslan/excursion/resources/images/phone.png"
+        class="phone-icon"
+        alt="phone icon"
+      />
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href="#" class="download-url">Download Excursion (Coming soon!)</a>
+    </div>
 
-</body>
+    <footer>
+      <p>&copy; Excursion</p>
+    </footer>
+  </body>
 </html>
