--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excursion</title>
     <link
-      href="/Users/ruslan/excursion/resources/style.css"
+      href="/Users/ruslan/Documents/Coding/Portfolio/excursion/resources/style.css"
       rel="stylesheet"
       type="text/css"
     />
   </head>
   <body>
     <header>
+      <nav>
+        <ul>
+          <li><a href="#">GO HOME</a></li>
+          <li><a href="#">Back to Portfolio</a></li>
+        </ul>
+      </nav>
       <h1>Discover hidden places in the world around you</h1>
       <a href="#" class="header-link">Download Excursion (Coming Soon!)</a>
     </header>
 
     <video autoplay muted>
       <source
-        src="/Users/ruslan/excursion/resources/videos/excursion.mp4"
+        src="/Users/ruslan/Documents/Coding/Portfolio/excursion/resources/videos/excursion.mp4"
         type="video/mp4"
       />
     </video>
@@ -32,7 +38,7 @@
         interest around you.
       </p>
       <img
-        src="/Users/ruslan/excursion/resources/images/camp.jpg"
+        src="/Users/ruslan/Documents/Coding/Portfolio/excursion/resources/images/camp.jpg"
         class="camp-photo"
         alt="camping photo"
       />
@@ -40,7 +46,7 @@
 
     <div class="coming-soon">
       <img
-        src="/Users/ruslan/excursion/resources/images/phone.png"
+        src="/Users/ruslan/Documents/Coding/Portfolio/excursion/resources/images/phone.png"
         class="phone-icon"
         alt="phone icon"
       />
