updated html and css to include nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">GO HOME</a></li>
+          <li><a href="/Users/ruslan/Documents/Coding/References/homepage/index.html">GO HOME</a></li>
           <li><a href="#">Back to Portfolio</a></li>
         </ul>
       </nav>
